--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="mocha">
       <div class="mocha-fixture hidden">
-        <h1>Hello World</h1>
+        <table><thead></thead><tbody></tbody></table>
       </div>
     </div>
 
