--- a/test/index.html
+++ b/test/index.html
@@ -29,6 +29,7 @@
     <!-- include source files here... -->
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../bower_components/async/lib/async.js"></script>
+    <script src="../bower_components/lodash/lodash.min.js"></script>
     <script src="../public/js/main.js"></script>
     <!-- include spec files here... -->
     <script src="spec/main.test.js"></script>
